Update google api endpoint

--- a/04-Front-End/03-Bootstrap/04-Map-layout/css/style.css
+++ b/04-Front-End/03-Bootstrap/04-Map-layout/css/style.css
@@ -1,5 +1,5 @@
 /* Importing Google fonts */
-@import url("https://fonts.googleapis.com/css?family=Varela+Round");
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round");
 
 /* Importing components */
 @import url("components/card.css");
