--- a/04-Front-End/03-Bootstrap/Optional-01-Slack-copycat/css/style.css
+++ b/04-Front-End/03-Bootstrap/Optional-01-Slack-copycat/css/style.css
@@ -1,5 +1,5 @@
 /* Importing Google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:400,700,800');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800');
 
 /* Importing components */
 @import url("components/sidebars.css");
