--- a/04-Front-End/03-Bootstrap/04-Map-layout/css/style.css
+++ b/04-Front-End/03-Bootstrap/04-Map-layout/css/style.css
@@ -6,7 +6,7 @@
 @import url("components/navbar.css");
 
 /* Importing layouts */
-@import url("pages/map.css");
+@import url("pages/cities.css");
 
 body {
   margin: 0;
