js & dom - review event or odd

--- a/04-Front-End/04-JS-and-DOM/01-Even-or-odd/application.css
+++ b/04-Front-End/04-JS-and-DOM/01-Even-or-odd/application.css
@@ -1,5 +1,25 @@
 /* DO NOT REMOVE */
 
-#mocha-stats .progress {
-  display: none;
+.blue {
+  color: blue;
+}
+
+.error,
+.success {
+  padding: 0.5em;
+  margin-bottom: 0.2em;
+}
+
+.error {
+  background-color: red;
+  color: white;
+}
+
+.success {
+  background-color: lightgreen;
+}
+
+#results-wrapper,
+#results-wrapper #results {
+  position: relative;
 }
