--- a/04-Front-End/05-Events-and-Iterators/04-Wagon-Race/style.css
+++ b/04-Front-End/05-Events-and-Iterators/04-Wagon-Race/style.css
@@ -1,1 +1,36 @@
 /* Your board style here */
+.racer-table td {
+  height: 40px;
+  width: 40px;
+}
+.racer-table td.active {
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+#player1-race td.active {
+  background-image: url("images/player_1.png");
+}
+#player2-race td.active {
+  background-image: url("images/player_2.png");
+}
+
+td:last-child {
+  background-image: url(images/finish.png);
+  background-size: cover;
+}
+
+.racer-table {
+  margin: auto;
+}
+
+.racer-table td {
+  height: 80px;
+  width: 80px;
+  border: 1px solid whitesmoke;
+}
+
+.racer-table td.active {
+  background-repeat: no-repeat;
+  background-size: 90%;
+  background-position: center;
+}
